@@ -1,7 +1,8 @@
 Revision history for JSON-Schema-Modern
 
 {{$NEXT}}
-          - add media-type support for application/x-ndjson
+          - add media-type support for application/x-ndjson and
+            application/x-www-form-urlencoded
 
 0.567     2023-06-03 22:11:23Z
           - vocabularies are now evaluated in a different order: Validation
